[FIXED] overscroll behavior fixed on safari

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,9 +18,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root, body {
+  overscroll-behavior: none;
+}
+
 body {
   margin: 0;
-  overscroll-behavior: none;
 }
 
 i {
